# ParticleSandbox

./: .gitignore  LICENSE  README.md  particle.bat
.github/workflows/: codeql.yml
include/glad/: glad.h
lib/GLFW/: glfw3.lib
lib/GLFW/pkgconfig/: glfw3.pc
lib/freetype/lib/: freetyped.lib
other/: README.md
other/space_coordinates/: CMakeLists.txt  README.md  build.bat
other/space_coordinates/src/: main.cpp
other/space_coordinates/src/common/: Shader.cpp  Shader.h  Window.cpp  Window.h
other/space_coordinates/src/shaders/: test1.fs  test1.vs
project/: CMakeLists.txt  env.bat
project/wasm/: CMakeLists.txt  ParticleSandbox.html  README.md  build.bat  env.bat  wasmloader.js
project/wasm/inc/: uuid_v4.h
project/wasm/lib/freetype/2.10.0/pkgconfig/: freetype2.pc
src/: arch_support.cpp  arch_support.h  main.cpp  wasm_main.cpp
src/common/: Application.cpp  Application.h  Chrono.cpp  Chrono.h  Event.h  EventHandler.cpp  EventHandler.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Signal.h  Window.cpp  Window.h
src/core/: Particle.cpp  Particle.h
src/geometry/: Circle.h  Line.h  Point.h  Rectangle.h  Triangle.h
src/glad/: glad.c
src/graphics/adapters/: RectangleAdapter.h  TriangleAdapter.cpp  TriangleAdapter.h
src/graphics/components/adapters/: AdvancedRectangle.cpp  AdvancedRectangle.h  CircleAdapter.cpp  CircleAdapter.h  PanickedCircle.cpp  PanickedCircle.h  ParticleAdapter.cpp  ParticleAdapter.h  RectangleAdapter.cpp  RectangleAdapter.h  TriangleAdapter.cpp  TriangleAdapter.h  WigglingCircle.cpp  WigglingCircle.h
src/graphics/components/common/: BezierCurve.cpp  BezierCurve.h  GraphicImage.cpp  GraphicImage.h  GraphicLine.cpp  GraphicLine.h  GraphicText.cpp  GraphicText.h
src/graphics/components/ui/: Button.cpp  Button.h  ButtonGroup.cpp  ButtonGroup.h  Checkbox.cpp  Checkbox.h  Input.cpp  Input.h  MatrixStatebox.cpp  MatrixStatebox.h  ParticleMatrix.cpp  ParticleMatrix.h  SceneSwitcher.cpp  SceneSwitcher.h  Slider.cpp  Slider.h  Statebox.cpp  Statebox.h
src/graphics/components/ui/layout/: BasicUI.cpp  BasicUI.h  BehaviorUI.cpp  BehaviorUI.h  LayoutUI.h
src/graphics/main/: Font.cpp  Font.h  GraphicContext.cpp  GraphicContext.h  GraphicObject.cpp  GraphicObject.h  GraphicsContext.cpp  GraphicsContext.h  ParticleImpl.cpp  ParticleImpl.h  Shader.cpp  Shader.h
src/graphics/shaders/: basic.fs  basic.vs  button.fs  button.vs  line.fs  line.vs  particle.fs  particle.vs  text.vs  texture.fs  texture.vs  ui.fs  ui.vs
src/graphics/util/: BasicUI.cpp  BasicUI.h  ParticleDetector.cpp  ParticleDetector.h
src/graphics/util/generators/: ParticleGenerator.cpp  ParticleGenerator.h
src/wasm/: Wasm_View.cpp  Wasm_View.h
src/wasm/shaders/: basic.fs  basic.vs  button.fs  button.vs  lighting.fs  lighting.vs  line.fs  line.vs  particle.fs  particle.vs  text.fs  text.vs  texture.fs  texture.vs  ui.fs  ui.vs
